
* Mon Feb 09 2009 John Pye <john.pye@anu.edu.au> 0.20090209
- Added support for FRAME3DD_OUTDIR as location of output files
- Updated documentation
- Added datestamp to documentation (a bit kludgey)
- More comments on use of temp directory and output files.
- Changed example files to remove absolute /tmp paths.
- Changelog converted to separate file.
- Added missing documentation images to Windows installer.

* Mon Feb 02 2009 John Pye <john.pye@anu.edu.au> 0.20090202
- Fixed problem with use of /tmp on Windows
- Upload binaries to SF.net
- Add comments to README-win32.txt

* Thu Jan 29 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090129
- Completed migration of website to frame3dd.sourceforge.net

* Sun Jan 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090104
- Input data order reorganized: joints, reactions, members, loads
- Updated TODO.txt, website, examples, and documentation. 

* Thu Jan 1 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090101
- Implemented .CSV spreadsheet support
- Eliminated some unneccessary vectors  "_lc"
- Updated TODO.txt, website, examples, and documentation. 

* Wed Dec 31 2008 Henri Gavin <henri.gavin@duke.edu> 0.20081231
- Moved rel_norm() from ldl_dcmp.c to frame3dd.c
- User input variables are now float instead of double
  ... except for joint location variable (xyz) which is still type vec3

* Tue Dec 30 2008 Henri Gavin <henri.gavin@duke.edu> 0.20081230
- The Input Data file format changed in two ways as follows:
  > Reaction data are listed just after the Member data.
  > Prescribed displacements are listed separately for each load case.
- Added comments to src/*.h files
- Changed "nM" variable name to "nB" ... number of beam elements
- Changed "modes" variable name to "nM" ... number of dynamic modes
- Changed "pos" variable name to "xyz" ... joint locations
- Removed many #include "abc.h" lines from .c source files
  without affecting the ability to execute or to compile warning-free via  ... 