@@ -109,3 +109,257 @@ Example A: linear static analysis of a 2D truss with support settlement
 0				% number of desired dynamic modes of vibration
 
 
+
+________________________________________________________________________________
+FRAME3DD version: 20090104               http://frame3dd.sf.net/
+GPL Copyright (C) 1992-2009, Henri P. Gavin 
+FRAME3DD is distributed in the hope that it will be useful but with no warranty.
+For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
+________________________________________________________________________________
+
+Example A: linear static analysis of a 2D truss with support settlement 
+Sat Feb  7 23:12:12 2009
+________________________________________________________________________________
+12 JOINTS;    21 MEMBERS;    2 LOAD CASES;
+12 FIXED JOINTS;   For 2D problems, the Y-axis is vertical. 
+For 3D problems, the Z-axis is vertical. 
+________________________________________________________________________________
+J O I N T   D A T A                                         R E S T R A I N T S
+  Joint      X              Y              Z         radius  Fx Fy Fz Mx My Mz
+    1       0.000000       0.000000       0.000000    0.000   1  1  1  1  1  0
+    2      12.000000       0.000000       0.000000    0.000   0  0  1  1  1  0
+    3      24.000000       0.000000       0.000000    0.000   0  0  1  1  1  0
+    4      36.000000       0.000000       0.000000    0.000   0  0  1  1  1  0
+    5      48.000000       0.000000       0.000000    0.000   0  0  1  1  1  0
+    6      60.000000       0.000000       0.000000    0.000   0  0  1  1  1  0
+    7      72.000000       0.000000       0.000000    0.000   0  1  1  1  1  0
+    8      12.000000      12.000000       0.000000    0.000   1  0  1  1  1  0
+    9      24.000000      12.000000       0.000000    0.000   0  0  1  1  1  0
+   10      36.000000      12.000000       0.000000    0.000   0  0  1  1  1  0
+   11      48.000000      12.000000       0.000000    0.000   0  0  1  1  1  0
+   12      60.000000      12.000000       0.000000    0.000   0  0  1  1  1  0
+B E A M   D A T A							(local)
+  Beam   J1    J2     Ax   Asy   Asz    Jxx     Iyy     Izz       E       G roll
+    1     1     2   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    2     2     3   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    3     3     4   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    4     4     5   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    5     5     6   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    6     6     7   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    7     1     8   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    8     2     8   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+    9     2     9   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   10     3     9   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   11     4     9   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   12     4    10   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   13     4    11   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   14     5    11   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   15     6    11   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   16     6    12   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   17     7    12   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   18     8     9   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   19     9    10   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   20    10    11   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+   21    11    12   30.0   1.0   1.0    1.0     1.0     0.0  10000.0   500.0   0
+  Neglect shear deformations.
+  Neglect geometric stiffness.
+
+L O A D   C A S E   1   O F   2  ... 
+
+   5 joints  with concentrated loads
+   0 elements with uniformly distributed loads
+   0 elements with concentrated point loads
+   0 elements with temperature loads
+   1 joints  with prescribed displacements
+ J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
+  Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
+     2       0.000     -20.000       0.000       0.000       0.000       0.000
+     3       0.000     -40.000       0.000       0.000       0.000       0.000
+     4       0.000     -30.000       0.000       0.000       0.000       0.000
+     5       0.000     -10.000       0.000       0.000       0.000       0.000
+     6       0.000     -30.000       0.000       0.000       0.000       0.000
+
+P R E S C R I B E D   D I S P L A C E M E N T S                        (global)
+  Joint       Dx          Dy          Dz          Dxx         Dyy         Dzz
+     8       0.010       0.000       0.000       0.000       0.000       0.000
+
+L O A D   C A S E   2   O F   2  ... 
+
+   3 joints  with concentrated loads
+   0 elements with uniformly distributed loads
+   0 elements with concentrated point loads
+   3 elements with temperature loads
+   2 joints  with prescribed displacements
+ J O I N T   L O A D S  +  E Q U I V A L E N T   J O I N T   L O A D S  (global)
+  Joint       Fx          Fy          Fz          Mxx         Myy         Mzz
+     3      20.000      -0.000       0.000       0.000       0.000       0.000
+     4      30.000      -0.000       0.000       0.000       0.000       0.000
+     5      20.000       0.000       0.000       0.000       0.000       0.000
+     6       0.000      -0.000       0.000       0.000       0.000       0.000
+     9       0.000       0.000       0.000       0.000       0.000       0.000
+    11      -0.000       0.000       0.000       0.000       0.000       0.000
+ B E A M   T E M P E R A T U R E   C H A N G E S			(local)
+  Beam      coef      hy        hz        Ty+       Ty-       Tz+       Tz-
+    10  6.00e-12     1.500     1.500    10.000    10.000    10.000    10.000
+    13  6.00e-12     1.500     1.500    15.000    15.000    15.000    15.000
+    15  6.00e-12     1.500     1.500    17.000    17.000    17.000    17.000
+
+P R E S C R I B E D   D I S P L A C E M E N T S                        (global)
+  Joint       Dx          Dy          Dz          Dxx         Dyy         Dzz
+     1       0.000      -0.010       0.000       0.000       0.000       0.000
+     8       0.050       0.000       0.000       0.000       0.000       0.000
+
+E L A S T I C   S T I F F N E S S   A N A L Y S I S   via  L D L'  decomposition
+
+
+L O A D   C A S E   1   O F   2  ... 
+
+J O I N T   D I S P L A C E M E N T S					(global)
+  Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1    0.0         0.0         0.0         0.0         0.0        -0.001712
+     2    0.000646   -0.021756    0.0         0.0         0.0        -0.001339
+     3    0.003562   -0.038487    0.0         0.0         0.0        -0.000727
+     4    0.006478   -0.041661    0.0         0.0         0.0         0.000104
+     5    0.009536   -0.036266    0.0         0.0         0.0         0.000720
+     6    0.012595   -0.022824    0.0         0.0         0.0         0.001326
+     7    0.014724    0.0         0.0         0.0         0.0         0.001948
+     8    0.010000   -0.018686    0.0         0.0         0.0        -0.001117
+     9    0.009354   -0.036887    0.0         0.0         0.0        -0.000829
+    10    0.005767   -0.041661    0.0         0.0         0.0         0.000060
+    11    0.002180   -0.035866    0.0         0.0         0.0         0.000798
+    12    0.000051   -0.020695    0.0         0.0         0.0         0.001210
+B E A M   E N D   F O R C E S						(local)
+  Beam   Joint      Nx          Vy         Vz         Txx        Myy        Mzz
+     1      1    -16.138t      0.002      0.0        0.0        0.0        0.011
+     1      2     16.138t     -0.002      0.0        0.0        0.0        0.017
+     2      2    -72.907t      0.003      0.0        0.0        0.0        0.013
+     2      3     72.907t     -0.003      0.0        0.0        0.0        0.023
+     3      3    -72.909t     -0.000      0.0        0.0        0.0       -0.009
+     3      4     72.909t      0.000      0.0        0.0        0.0        0.005
+     4      4    -76.455t     -0.000      0.0        0.0        0.0       -0.007
+     4      5     76.455t      0.000      0.0        0.0        0.0        0.003
+     5      5    -76.453t     -0.001      0.0        0.0        0.0       -0.010
+     5      6     76.453t      0.001      0.0        0.0        0.0        0.000
+     6      6    -53.226t     -0.002      0.0        0.0        0.0       -0.018
+     6      7     53.226t      0.002      0.0        0.0        0.0       -0.008
+     7      1    108.570c     -0.001      0.0        0.0        0.0       -0.011
+     7      8   -108.570c      0.001      0.0        0.0        0.0       -0.004
+     8      2    -76.765t     -0.004      0.0        0.0        0.0       -0.024
+     8      8     76.765t      0.004      0.0        0.0        0.0       -0.021
+     9      2     80.278c     -0.000      0.0        0.0        0.0       -0.006
+     9      9    -80.278c      0.000      0.0        0.0        0.0       -0.000
+    10      3    -39.997t     -0.002      0.0        0.0        0.0       -0.014
+    10      9     39.997t      0.002      0.0        0.0        0.0       -0.016
+    11      4    -23.720t     -0.000      0.0        0.0        0.0        0.004
+    11      9     23.720t      0.000      0.0        0.0        0.0       -0.007
+    12      4     -0.001t      0.000      0.0        0.0        0.0        0.002
+    12     10      0.001t     -0.000      0.0        0.0        0.0        0.001
+    13      4    -18.706t      0.000      0.0        0.0        0.0       -0.003
+    13     11     18.706t     -0.000      0.0        0.0        0.0        0.005
+    14      5    -10.000t      0.001      0.0        0.0        0.0        0.007
+    14     11     10.000t     -0.001      0.0        0.0        0.0        0.008
+    15      6     32.845c      0.000      0.0        0.0        0.0        0.006
+    15     11    -32.845c     -0.000      0.0        0.0        0.0       -0.000
+    16      6    -53.223t      0.002      0.0        0.0        0.0        0.012
+    16     12     53.223t     -0.002      0.0        0.0        0.0        0.010
+    17      7     75.273c      0.000      0.0        0.0        0.0        0.008
+    17     12    -75.273c     -0.000      0.0        0.0        0.0       -0.001
+    18      8     16.142c      0.005      0.0        0.0        0.0        0.025
+    18      9    -16.142c     -0.005      0.0        0.0        0.0        0.030
+    19      9     89.682c      0.000      0.0        0.0        0.0       -0.007
+    19     10    -89.682c     -0.000      0.0        0.0        0.0        0.008
+    20     10     89.682c     -0.000      0.0        0.0        0.0       -0.009
+    20     11    -89.682c      0.000      0.0        0.0        0.0        0.003
+    21     11     53.228c     -0.002      0.0        0.0        0.0       -0.016
+    21     12    -53.228c      0.002      0.0        0.0        0.0       -0.010
+R E A C T I O N S							(global)
+  Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
+     1      60.633      76.772       0.0         0.0         0.0         0.0  
+     2       0.0         0.0         0.0         0.0         0.0         0.0  
+     3       0.0         0.0         0.0         0.0         0.0         0.0  
+     4       0.0         0.0         0.0         0.0         0.0         0.0  
+     5       0.0         0.0         0.0         0.0         0.0         0.0  
+     6       0.0         0.0         0.0         0.0         0.0         0.0  
+     7       0.0        53.228       0.0         0.0         0.0         0.0  
+     8     -60.633       0.0         0.0         0.0         0.0         0.0  
+     9       0.0         0.0         0.0         0.0         0.0         0.0  
+    10       0.0         0.0         0.0         0.0         0.0         0.0  
+    11       0.0         0.0         0.0         0.0         0.0         0.0  
+    12       0.0         0.0         0.0         0.0         0.0         0.0  
+R M S   E Q U I L I B R I U M    E R R O R: 9.629e-15
+
+L O A D   C A S E   2   O F   2  ... 
+
+J O I N T   D I S P L A C E M E N T S					(global)
+  Joint    X-dsp       Y-dsp       Z-dsp       X-rot       Y-rot       Z-rot
+     1    0.0        -0.010000    0.0         0.0         0.0        -0.004107
+     2    0.013469   -0.051831    0.0         0.0         0.0        -0.002726
+     3    0.024805   -0.071657    0.0         0.0         0.0        -0.000852
+     4    0.035340   -0.069613    0.0         0.0         0.0         0.000564
+     5    0.040408   -0.054766    0.0         0.0         0.0         0.001507
+     6    0.044675   -0.030584    0.0         0.0         0.0         0.002075
+     7    0.046809    0.0         0.0         0.0         0.0         0.002538
+     8    0.050000   -0.053964    0.0         0.0         0.0        -0.002849
+     9    0.039331   -0.071657    0.0         0.0         0.0        -0.000806
+    10    0.032929   -0.069613    0.0         0.0         0.0         0.000587
+    11    0.026528   -0.054766    0.0         0.0         0.0         0.001546
+    12    0.024394   -0.028450    0.0         0.0         0.0         0.001982
+B E A M   E N D   F O R C E S						(local)
+  Beam   Joint      Nx          Vy         Vz         Txx        Myy        Mzz
+     1      1   -336.730t      0.001      0.0        0.0        0.0       -0.008
+     1      2    336.730t     -0.001      0.0        0.0        0.0        0.015
+     2      2   -283.384t     -0.001      0.0        0.0        0.0       -0.022
+     2      3    283.384t      0.001      0.0        0.0        0.0        0.009
+     3      3   -263.381t     -0.003      0.0        0.0        0.0       -0.028
+     3      4    263.381t      0.003      0.0        0.0        0.0       -0.004
+     4      4   -126.693t     -0.002      0.0        0.0        0.0       -0.018
+     4      5    126.693t      0.002      0.0        0.0        0.0       -0.002
+     5      5   -106.690t     -0.002      0.0        0.0        0.0       -0.016
+     5      6    106.690t      0.002      0.0        0.0        0.0       -0.006
+     6      6    -53.345t     -0.002      0.0        0.0        0.0       -0.016
+     6      7     53.345t      0.002      0.0        0.0        0.0       -0.008
+     7      1    -75.446t      0.002      0.0        0.0        0.0        0.008
+     7      8     75.446t     -0.002      0.0        0.0        0.0        0.023
+     8      2     53.344c      0.002      0.0        0.0        0.0        0.014
+     8      8    -53.344c     -0.002      0.0        0.0        0.0        0.012
+     9      2    -75.438t      0.001      0.0        0.0        0.0       -0.006
+     9      9     75.438t     -0.001      0.0        0.0        0.0        0.016
+    10      3      0.001c      0.003      0.0        0.0        0.0        0.019
+    10      9     -0.001c     -0.003      0.0        0.0        0.0        0.019
+    11      4     75.436c     -0.000      0.0        0.0        0.0        0.007
+    11      9    -75.436c      0.000      0.0        0.0        0.0       -0.009
+    12      4      0.001c      0.003      0.0        0.0        0.0        0.019
+    12     10     -0.001c     -0.003      0.0        0.0        0.0        0.019
+    13      4    -75.439t      0.000      0.0        0.0        0.0       -0.003
+    13     11     75.439t     -0.000      0.0        0.0        0.0        0.008
+    14      5      0.000c      0.003      0.0        0.0        0.0        0.018
+    14     11     -0.000c     -0.003      0.0        0.0        0.0        0.019
+    15      6     75.436c      0.000      0.0        0.0        0.0        0.005
+    15     11    -75.436c     -0.000      0.0        0.0        0.0       -0.001
+    16      6    -53.341t      0.003      0.0        0.0        0.0        0.018
+    16     12     53.341t     -0.003      0.0        0.0        0.0        0.016
+    17      7     75.441c      0.001      0.0        0.0        0.0        0.008
+    17     12    -75.441c     -0.001      0.0        0.0        0.0        0.002
+    18      8    266.728c     -0.003      0.0        0.0        0.0       -0.035
+    18      9   -266.728c      0.003      0.0        0.0        0.0       -0.001
+    19      9    160.040c     -0.002      0.0        0.0        0.0       -0.026
+    19     10   -160.040c      0.002      0.0        0.0        0.0       -0.002
+    20     10    160.037c     -0.001      0.0        0.0        0.0       -0.017
+    20     11   -160.037c      0.001      0.0        0.0        0.0       -0.001
+    21     11     53.348c     -0.004      0.0        0.0        0.0       -0.025
+    21     12    -53.348c      0.004      0.0        0.0        0.0       -0.018
+R E A C T I O N S							(global)
+  Joint       Fx          Fy          Fz         Mxx         Myy         Mzz
+     1    -390.080     -53.347       0.0         0.0         0.0         0.0  
+     2       0.0         0.0         0.0         0.0         0.0         0.0  
+     3       0.0         0.0         0.0         0.0         0.0         0.0  
+     4       0.0         0.0         0.0         0.0         0.0         0.0  
+     5       0.0         0.0         0.0         0.0         0.0         0.0  
+     6       0.0         0.0         0.0         0.0         0.0         0.0  
+     7       0.0        53.347       0.0         0.0         0.0         0.0  
+     8     320.080       0.0         0.0         0.0         0.0         0.0  
+     9       0.0         0.0         0.0         0.0         0.0         0.0  
+    10       0.0         0.0         0.0         0.0         0.0         0.0  
+    11       0.0         0.0         0.0         0.0         0.0         0.0  
+    12       0.0         0.0         0.0         0.0         0.0         0.0  
+R M S   E Q U I L I B R I U M    E R R O R: 1.530e-06
